--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
   <footer>
-    Shagun this side..<br>
-    ❤️ to play drum set .
+    Lets Bang.<br>
+    ❤️ on  .
   </footer>
 
   <script src="index.js" charset="utf-8"></script>
