--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button class="w drum">w</button>
+    <button class="b drum">w</button>
     <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="n drum">s</button>
+    <button class="g drum">d</button>
+    <button class="  drum">j</button>
+    <button class="o drum">k</button>
+    <button class="n drum">l</button>
   </div>
 
 
