--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="a drum">a</button>
     <button class="n drum">s</button>
     <button class="g drum">d</button>
-    <button class="  drum">j</button>
+    <button class="- drum">j</button>
     <button class="o drum">k</button>
     <button class="n drum">l</button>
   </div>
